@@ -815,11 +815,11 @@ and in smaller characters.
 
 <ul><li>
 
-<strong>Image</strong> is a ".gif" or ".jpg" file associated to the
-person and which will be displayed in his personal record. This can be
-an URL address (starting with "http://...") or just a name the system
-will search in the directory "images", subdirectory "base" (where
-"base" is the name of the database) while displaying.
+<strong>Image</strong> is a ".gif", ".jpg", or ".png" file associated
+to the person and which will be displayed in his personal record. This
+can be an URL address (starting with "http://...") or just a name the
+system will search in the directory "images", subdirectory "base"
+(where "base" is the name of the database) while displaying.
 
 <p>
 
@@ -840,8 +840,9 @@ as default image name:
    anne_cecile.0.dupont_de_nemours
 </pre>
 
-<font color=#2f6400><b>GeneWeb</b></font> search a file with this name followed by ".gif" or
-".jpg" in the above directory of the images of the database.
+<font color=#2f6400><b>GeneWeb</b></font> search a file with this name
+followed by ".gif", ".jpg" or ".png" in the above directory of the
+images of the database.
 
 </ul>
 
@@ -1182,9 +1183,9 @@ that, and if the field "image" of the person is empty.
 
 <p>
 
-You can send (upload) a "gif" or "jpeg" file which will be associated
-to the person. This file is recorded in the site. If this person
-already had a image, yours replaces it.
+You can send (upload) a "gif", "jpeg" or "png" file which will be
+associated to the person. This file is recorded in the site. If this
+person already had a image, yours replaces it.
 
 <p>
 
