@@ -918,13 +918,13 @@ sont rel&eacute;gu&eacute;s en plus petit, en dessous.
 
 <ul><li>
 
-<strong>Image</strong> est un fichier ".gif" ou ".jpg" associ&eacute;
-&agrave; la personne et qui sera affich&eacute; dans sa fiche
-personnelle. Ce peut &ecirc;tre une adresse URL (commen&ccedil;ant par
-"http://...") ou juste un nom de fichier, que le syst&egrave;me
-cherchera dans le r&eacute;pertoire "images", sous-r&eacute;pertoire
-"base" (o&ugrave; "base" est le nom de la base) au moment de
-l'affichage.
+<strong>Image</strong> est un fichier ".gif", ".jpg" ou ".png"
+associ&eacute; &agrave; la personne et qui sera affich&eacute; dans sa
+fiche personnelle. Ce peut &ecirc;tre une adresse URL
+(commen&ccedil;ant par "http://...") ou juste un nom de fichier, que
+le syst&egrave;me cherchera dans le r&eacute;pertoire "images",
+sous-r&eacute;pertoire "base" (o&ugrave; "base" est le nom de la base)
+au moment de l'affichage.
 
 <p>
 
@@ -949,9 +949,9 @@ Nemours" aura pour nom de image par d&eacute;faut:
 
 <p>
 
-<font color=#2f6400><b>GeneWeb</b></font> cherchera un fichier portant ce nom suivi de ".gif"
-ou de ".jpg" dans le r&eacute;pertoire des images de la base
-cit&eacute; ci-dessus.
+<font color=#2f6400><b>GeneWeb</b></font> cherchera un fichier portant
+ce nom suivi de ".gif", ".jpg" ou ".png" dans le r&eacute;pertoire des
+images de la base cit&eacute; ci-dessus.
 
 </ul>
 
@@ -1349,9 +1349,9 @@ et que le champ "image" de la personne soit vide.
 
 <p>
 
-Il s'agit d'envoyer un fichier "gif" ou "jpeg" qui sera associ&eacute;
-&agrave; la personne. Si cette personne avait d&eacute;j&agrave; une
-image, celle que vous enverrez la remplacera.
+Il s'agit d'envoyer un fichier "gif", "jpeg" ou "png" qui sera
+associ&eacute; &agrave; la personne. Si cette personne avait
+d&eacute;j&agrave; une image, celle que vous enverrez la remplacera.
 
 <p>
 
